# stm32bluepilltempl

./: CMakeLists.txt  README  init.bat
src/: CMakeLists.txt  clock_config.c  cpu_defs.h  entry.S  main.c
